[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Rainbow2000-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameOver.gd" type="Script" id=2]
[ext_resource path="res://ButtonTheme.tres" type="Theme" id=3]
[ext_resource path="res://A.mp3" type="AudioStream" id=4]
[ext_resource path="res://click.wav" type="AudioStream" id=5]
[ext_resource path="res://blipSelect.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=33]
size = 50
outline_size = 1
outline_color = Color( 0.509804, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="GameOver" type="Popup"]
pause_mode = 2
margin_right = 493.0
margin_bottom = 284.0
popup_exclusive = true
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1026.0
margin_bottom = 599.0

[node name="Label" type="Label" parent="Panel"]
margin_left = 243.0
margin_top = 53.0
margin_right = 715.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 33 )
text = "Game Over 
Continue?"
align = 1

[node name="Yes" type="Button" parent="Panel"]
margin_left = 180.0
margin_top = 266.0
margin_right = 343.0
margin_bottom = 351.0
focus_neighbour_left = NodePath("../No")
focus_neighbour_right = NodePath("../No")
focus_next = NodePath("../No")
focus_previous = NodePath("../No")
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.027451, 0.027451, 1 )
text = "Yes"

[node name="No" type="Button" parent="Panel"]
margin_left = 602.0
margin_top = 267.0
margin_right = 786.0
margin_bottom = 352.0
focus_neighbour_left = NodePath("../Yes")
focus_neighbour_right = NodePath("../Yes")
focus_next = NodePath("../Yes")
focus_previous = NodePath("../Yes")
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.027451, 0.027451, 1 )
text = "NO"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="about_to_show" from="." to="." method="_on_GameOver_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_GameOver_popup_hide"]
[connection signal="focus_entered" from="Panel/Yes" to="." method="_on_Yes_focus_entered"]
[connection signal="pressed" from="Panel/Yes" to="." method="_on_Yes_pressed"]
[connection signal="focus_entered" from="Panel/No" to="." method="_on_No_focus_entered"]
[connection signal="pressed" from="Panel/No" to="." method="_on_No_pressed"]
